fix: change font for better readability

--- a/css/recipe-style.css
+++ b/css/recipe-style.css
@@ -1,17 +1,18 @@
-body{
+body {
     font-size: 1em;
-    font-family: Copperplate, Papyrus, fantasy, serif;
 }
 
 h1 {
     font-weight: 800;
     font-size: 4em;
     text-align: center;
+    font-family: Copperplate, Papyrus, fantasy, serif;
 }
 
 h2 {
     font-size: 2.3rem;
     margin-top: 1.5em;
+    font-family: Copperplate, Papyrus, fantasy, serif;
 }
 
 img {
@@ -23,6 +24,7 @@ img {
 
 p , li {
     font-size: 1.5em;
+    font-family: Candara, serif;
 }
 
 #main-desc {
